assignments/pa3/testsuite/cgen/out/dispatch-void-static.cl.spim.err
spim: (parser) syntax error on line 190 of file /home/raj/cool/distro/assignments/pa3/testsuite/cgen/out/dispatch-void-static.cl.out
	  .word	-1
	  ^
Instruction references undefined symbol at 0x0040129c
